--- a/scss/_assurances.scss
+++ b/scss/_assurances.scss
@@ -9,20 +9,114 @@
   div {
     display: inline-block;
     margin: 2vw;
-    background: $white;
-    width: 18vw;
-    height: 5vw;
+    background-color: $white;
+    width: 10vw;
+    height: 10vw;
     border-radius: 1vw;
     text-align: center;
-    font-size: 3vw;
+    font-size: 2vw;
     font-weight: bold;
     padding: auto;
-    transition: 0.3s all;
+    transition: 0.6s all;
+  }
+
+  .rca {
+    background-image: url('../img/RCAbtn.png');
+    background-attachment: contain;
+    background-repeat: no-repeat;
+    padding: 2vw 0;
+    background-size: cover;
+    p {
+      opacity: 0;
+    }
+  }
+
+  .casco {
+    background-image: url('../img/cascobtn.png');
+    background-attachment: contain;
+    background-repeat: no-repeat;
+    padding: 2vw 0;
+    background-size: cover;
+    p {
+      opacity: 0;
+    }
+  }
+
+  .home {
+    background-image: url('../img/homebtn.png');
+    background-attachment: contain;
+    background-repeat: no-repeat;
+    padding: 2vw 0;
+    background-size: cover;
+    p {
+      opacity: 0;
+    }
+  }
+
+  .life {
+    background-image: url('../img/lifebtn.png');
+    background-attachment: contain;
+    background-repeat: no-repeat;
+    padding: 2vw 0;
+    background-size: cover;
+    p {
+      opacity: 0;
+    }
+  }
+
+  .health {
+    background-image: url('../img/healthbtn.png');
+    background-attachment: contain;
+    background-repeat: no-repeat;
+    padding: 2vw 0;
+    background-size: cover;
+    p {
+      opacity: 0;
+    }
+  }
+
+  .travel {
+    background-image: url('../img/travelbtn.png');
+    background-attachment: contain;
+    background-repeat: no-repeat;
+    background-size: cover;
+    padding: 2vw 0;
+    p {
+      opacity: 0;
+    }
+  }
+
+  .cmr {
+    background-image: url('../img/cmrbtn.png');
+    background-attachment: contain;
+    background-repeat: no-repeat;
+    background-size: cover;
+    padding: 2vw 0;
+    p {
+      opacity: 0;
+    }
+  }
+
+  .malpraxis {
+    background-image: url('../img/malpraxisbtn.png');
+    background-attachment: contain;
+    background-repeat: no-repeat;
+    background-size: cover;
+    padding: 2vw 0;
+    p {
+      opacity: 0;
+    }
   }
 
   div:hover {
     transition: 0.1s all;
     background-color: $secondary-color;
     color: $white;
+    background-image: none;
+    box-shadow: 1vh 1vw 1vh 1vh $black;
+    p {
+      text-decoration: underline;
+      opacity: 1;
+    }
   }
 }
