--- a/scss/_banner.scss
+++ b/scss/_banner.scss
@@ -4,7 +4,7 @@
   height: 50vh;
   background-size: cover;
   background-repeat: no-repeat;
-  background-attachment: scroll;
+  background-attachment: fixed;
 
   h1 {
     font-size: 6vw;
