--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -15,10 +15,15 @@ header {
     a {
       color: $black;
       text-decoration: none;
-      font-size: 1.5vw;
+      font-size: 2vw;
       margin: 2vw;
       font-weight: bold;
       transition: 0.3s all;
+
+      img {
+        height: 6vw;
+        width: auto;
+      }
     }
 
     a:hover {
@@ -30,5 +35,6 @@ header {
 
   nav {
     float: right;
+    padding-top: 2.5vh;
   }
 }
