--- a/scss/_banner.scss
+++ b/scss/_banner.scss
@@ -1,14 +1,14 @@
 .banner {
-  background: url('../img/banner.png');
+  background-image: url('../img/banner.jpeg');
   width: 100vw;
   height: 50vh;
   background-size: cover;
   background-repeat: no-repeat;
   background-attachment: fixed;
+}
 
-  h1 {
-    font-size: 6vw;
-    margin-top: 7vh;
-    margin-left: 3.5vw;
-  }
+h1 {
+  font-size: 4vw;
+  margin: 3vw;
+  color: $black;
 }
