--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -16,20 +16,24 @@ header {
       color: $black;
       text-decoration: none;
       font-size: 2vw;
-      margin: 2vw;
+      margin: 1.25vw 2vw;
       font-weight: bold;
       transition: 0.3s all;
 
       img {
+        display: inline-block;
         height: 6vw;
         width: auto;
+      }
+
+      p {
+        display: inline-block;
       }
     }
 
     a:hover {
       color: $secondary-color;
       transition: 0.1s all;
-      text-decoration: underline;
     }
   }
 
